Update `vm-agent.yaml` with correct repo and add `repo-url` field

--- a/tests/resources/vm-agent.yaml
+++ b/tests/resources/vm-agent.yaml
@@ -1,5 +1,6 @@
-name: victoria-metrics-agent
-repo: https://victoriametrics.github.io/helm-charts
 releaseName: pod-collector
 namespace: observability
 valuesFile: pod-collector.yaml
+name: victoria-metrics-agent
+repo: vm
+repo-url: https://victoriametrics.github.io/helm-charts
